# pincey

./: Cargo.toml  README.md  fly.toml  renovate.json
.github/workflows/: cd.yaml  ci.yaml
src/: main.rs
src/commands/: general.rs  localization.rs  mod.rs  random.rs  stats.rs
