[package]
name = "pincey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "0.4.1" }
tokio = { version = "1.4.0", features = ["rt-multi-thread"] } # for async in general
futures = { version = "0.3.13", default-features = false }
env_logger = "0.11.3"
fluent = "0.16.0"
intl-memoizer = "0.5.1"
fluent-syntax = "0.11"

# [target.aarch64-unknown-linux-gnu]
# linker = "aarch64-linux-gnu-gcc"

# [target.armv7-unknown-linux-gnueabihf]
# linker = "arm-linux-gnueabihf-gcc"
